Fix for placeholder text on Safari
Removed line-height: 18px from line 815 under .fb-searchbar input[type=search]. This is to fix a compatibility issue with HTML 5 placeholder tags and using line-height on the input element.

--- a/fbstyles.css
+++ b/fbstyles.css
@@ -812,7 +812,6 @@ a.tab.active {
     color: #535353;
     font-size: 24px;
     padding: 0 20px;
-    line-height: 18px;
     height: 60px;
     box-sizing: border-box;
     width: 90%;
